--- a/UI/css/mobileview.css
+++ b/UI/css/mobileview.css
@@ -26,5 +26,47 @@ div.mycontainer{
 
 
 
+.section {
+  clear: both;
+  padding: 0px;
+  margin: 0px;
+}
+.group:before,
+.group:after {
+    content:"";
+    display:table;
+}
+.group:after {
+    clear:both;
+}
+.group {
+    zoom:1;
+}
+
+
+
+.grid_1_of_4{ 
+    margin: 2% 0 2% 0%;
+  } 
+
+  .grid_1_of_4 > a img{ 
+    
+    margin-bottom: 4%;
+    display: flex;
+  flex-direction: column;
+  
+  } 
+
+.images_1_of_4{
+  float: none;
+  width: 90%;
+}
+
+
+
+
+
+
 
 }
+    
