--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -113,4 +113,82 @@ th, td {
 }
 
 
+.centerheading{
+	margin-left: 1.5em;
+}
 
+
+
+
+
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+.group:before,
+.group:after {
+    content:"";
+    display:table;
+}
+.group:after {
+    clear:both;
+}
+.group {
+    zoom:1;
+}
+
+
+
+
+.grid_1_of_4{
+	display: block;
+	float:left;
+	margin: 1% 0 1% 1.6%;
+	box-shadow: 0px 0px 3px rgb(150, 150, 150);
+}
+.grid_1_of_4:first-child { 
+	margin-left: 0; 
+} 
+
+.images_1_of_4 {
+  height: 360px;
+  padding: 1.5%;
+  position: relative;
+  text-align: center;
+  width: 20.8%;
+}
+.images_1_of_4  img{
+        height:200px;
+	max-width:100%;
+}
+
+.images_1_of_4  h2 {
+	color: #CC3636;
+	font-family: 'Monda', sans-serif;
+	font-size:0.9em;
+	font-weight : normal;
+}
+.images_1_of_4  p {
+	font-size:0.8125em;
+	padding:0.4em 0;
+	color: #333;	
+}
+.images_1_of_4  p span.strike{
+	font-size:18px;
+	font-family: 'Monda', sans-serif;
+	color:#444;
+	text-decoration:line-through;
+}
+.images_1_of_4  p span.price{
+	font-size:18px;
+	font-family: 'Monda', sans-serif;
+	color: #CC3636;
+	margin-left:15px;
+}
+.images_1_of_4 .button {
+  float: left;
+  line-height: 1.9em;
+  margin-top: 0.3em;
+  width: 100%;
+}
