Additional touch up of pages

--- a/UI/css/mobileview.css
+++ b/UI/css/mobileview.css
@@ -62,6 +62,14 @@ div.mycontainer{
   width: 90%;
 }
 
+.mealscenter{
+  margin: 0em 0em 0em 1em;
+}
+
+div.grid_1_of_4.images_1_of_4{
+  margin-bottom: 1em;
+}
+
 
 
 
