--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -16,6 +16,10 @@
 
 }
 
+#sixthadminitem{
+
+}
+
 #menuset{
 	width: 30%;
 	float: left;
@@ -191,4 +195,12 @@ th, td {
   line-height: 1.9em;
   margin-top: 0.3em;
   width: 100%;
+}
+
+.mealscenter{
+	margin: 0em 5em 0em 5em;
+}
+
+.centerfooter{
+	text-align: center;
 }
