new form field in admin-management

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -25,6 +25,12 @@
 	float: left;
 }
 
+#myform{
+	border: 1px dotted #202C45;
+	margin-right: 45em;
+	margin-bottom: 1em;
+}
+
 
 .makeorange{
 	color: #DA670F;
