--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -31,6 +31,13 @@
 	margin-bottom: 1em;
 }
 
+p#firstadminitemq > a{
+	margin-left: 3.5em;
+}
+
+.movetorite{
+	margin-right: 2em;
+}
 
 .makeorange{
 	color: #DA670F;
@@ -67,6 +74,7 @@ color: white;
 	 height: 50px;
 	}
 
+.beforeleft{}
 
 .right{background-color: #DA670F ; 
 	height: 50px; 
@@ -96,7 +104,7 @@ a:hover{
 	color: #202C45;
  background-color: white;
   border-radius: 15px;
-   padding: 5px;
+   padding: 2px;
 	}
 
 	.mycontainer{
@@ -126,9 +134,6 @@ th, td {
 .centerheading{
 	margin-left: 1.5em;
 }
-
-
-
 
 
 .section {
@@ -204,7 +209,7 @@ th, td {
 }
 
 .mealscenter{
-	margin: 0em 5em 0em 5em;
+	margin: 3em 5em 0em 5em;
 }
 
 .centerfooter{
@@ -213,4 +218,8 @@ th, td {
 
 .boldin{
 	font-weight: bolder;
+}
+
+body{
+	margin:0;
 }
