--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -25,6 +25,19 @@
 	float: left;
 }
 
+#myform{
+	border: 1px dotted #202C45;
+	margin-right: 45em;
+	margin-bottom: 1em;
+}
+
+p.firstadminitemq > a{
+	margin-left: 3.5em;
+}
+
+.movetorite{
+	margin-right: 2em;
+}
 
 .makeorange{
 	color: #DA670F;
@@ -61,6 +74,7 @@ color: white;
 	 height: 50px;
 	}
 
+.beforeleft{}
 
 .right{background-color: #DA670F ; 
 	height: 50px; 
@@ -90,7 +104,7 @@ a:hover{
 	color: #202C45;
  background-color: white;
   border-radius: 15px;
-   padding: 5px;
+   padding: 2px;
 	}
 
 	.mycontainer{
@@ -100,6 +114,10 @@ a:hover{
 
 .spacing{
 	margin-top: 2em;
+}
+
+.spacing2{
+	margin-top: 1em;
 }
 
 .lotsofspace{
@@ -120,9 +138,6 @@ th, td {
 .centerheading{
 	margin-left: 1.5em;
 }
-
-
-
 
 
 .section {
@@ -198,13 +213,20 @@ th, td {
 }
 
 .mealscenter{
-	margin: 0em 5em 0em 5em;
+	margin: 3em 5em 0em 5em;
 }
 
 .centerfooter{
 	text-align: center;
+
 }
 
 .boldin{
 	font-weight: bolder;
+}
+
+
+
+body{
+	margin:0;
 }
